--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "^4.19.2",
     "puppeteer-core": "^22.12.1",
     "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-adblocker": "^2.13.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
