--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@sparticuz/chromium": "^138.0.2",
     "express": "^4.19.2",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-adblocker": "^2.13.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "rebrowser-puppeteer-core": "^24.8.1"
+    "rebrowser-puppeteer": "^24.8.1"
   }
 }
