--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "puppeteer-core": "^22.12.1",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-adblocker": "^2.13.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "uuid": "^10.0.0"
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
