--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scrape-right-railway",
+  "name": "play-wrong",
   "version": "1.0.0",
   "description": "A powerful, serverless web scraper built with Playwright and deployed on Railway.",
   "main": "index.js",
