--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "puppeteer-core": "^24.22.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-adblocker": "^2.13.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "crypto-js": "^4.2.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5"
   }
 }
