--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   "dependencies": {
     "express": "^5.1.0",
     "cors": "^2.8.5",
-    "puppeteer-core": "^24.22.0",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-adblocker": "^2.13.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "playwright-extra": "^4.3.6",
+    "playwright-stealth": "^1.0.1",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5"
   }
