--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cors": "^2.8.5",
     "playwright": "*",
     "playwright-extra": "^4.3.6",
-    "@ghostery/adblocker-playwright": "*",
+    "@ghostery/adblocker-playwright": "^4.16.8",
     "playwright-extra-plugin-stealth": "^2.11.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5"
